One line changed

--- a/racha.html
+++ b/racha.html
@@ -39,7 +39,7 @@
                 <img src="IMG/racha/lebardes-didi-toba-5.jpg" alt="">
             </div>
             <div class="item">
-                <img src="IMG/racha/sofeli-shovi-village-shovi-2.jpg" alt="">
+                <img src="IMG/racha/" alt="">
             </div>
         </div>
         <div class="agwera">
@@ -56,7 +56,7 @@
         </div>
         <a href="login.html">
             <div class="discregion">
-                <p>Discover Racha</p>
+                <p>Discover Guria</p>
             </div>
         </a>
 
